background why us updated for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ img {
     
      /* WHY US */
      .why-us{
+        background-color: #222222;
         margin: 0;
         padding-top: 50px;
         padding-bottom: 0;
