--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
-/* *** DESKTOP & TABLET *** */
+/* ? *** DESKTOP & TABLET *** */
 
  @media screen and (max-width: 1200px) {
     .container{
@@ -137,7 +137,7 @@ img {
     
  }
 
- /* *** MOBILE *** */
+ /* ? *** MOBILE *** */
 
  @media screen and (max-width: 576px) {
 
